DDF-3640 icon change, ordering,  whitespace, and vertical dividers

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-right/navigation-right.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-right/navigation-right.less
@@ -16,6 +16,13 @@
         width: auto;
         overflow: hidden;
         text-overflow: ellipsis;
+        margin-right: 9rem;
+    }
+
+    .navigation-item.navigation-icon {
+        margin-right: 0.5em;
+        padding-left: 0.575em;
+        border-left: 1px solid #ccc;
     }
 
     .alerts-badge {
