--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-right/navigation-right.hbs
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/navigation-right/navigation-right.hbs
@@ -11,17 +11,17 @@
  *
  **/
  --}}
-<button class="navigation-item item-help is-button" title="Shows helpful hints in the current context.">
-    <span class="fa fa-question"></span>
+<button class="navigation-item navigation-icon item-help is-button" title="Shows helpful hints in the current context.">
+    <span class="fa fa-question-circle"></span>
 </button>
-<button class="navigation-item item-settings is-button" title="Shows settings for the application.">
-    <span class="fa fa-cog"></span>
-</button>
-<button class="navigation-item item-alerts is-button" title="Shows notifications.">
+<button class="navigation-item navigation-icon item-alerts is-button" title="Shows notifications.">
     <span class="fa fa-bell"></span>
     <span class="alerts-badge fa fa-exclamation"></span>
 </button>
-<button class="navigation-item item-user is-button">
+<button class="navigation-item navigation-icon item-settings is-button" title="Shows settings for the application.">
+    <span class="fa fa-cog"></span>
+</button>
+<button class="navigation-item navigation-icon item-user is-button">
     <div class="user-unique" title="Logged in as {{user.username}}">
         <span class="">{{user.username}}</span>
         <span class="fa fa-user"></span>
